--- a/conclusion.tex
+++ b/conclusion.tex
@@ -66,7 +66,9 @@ comparing the interferometer signal in differing levels of vibration
 noise. This also highlighted the importance of vibration isolation for
 accurate acceleration measurements. A study has been made of a hybrid
 system in which the atom interferometer works together with a MEMS
-accelerometer. This will be particularly important in a high-vibration
+accelerometer. Using this, we have been able to reach a sensitivity to
+acceleration of \sivalue{3}{\um\tothe{-2}} after an integration time
+of \sivalue{40}{\s}. This will be particularly important in a high-vibration
 environment where the classical accelerometer can identify the order
 number of the atom interferometer fringe. 
 \section{Avenues of Further Research}
@@ -95,11 +97,19 @@ vibration noise and better short-term stability than the
 state-of-the-art classical counterpart. Additionally, this interferometer has
 yet to be tested outside of a laboratory environment. As a first step
 in that direction, it was demonstrated at the UK National Quantum
-Technologies Showcase in November $2018$ in the Queen Elizabeth
-\rom{2} conference centre, where it operated in a normal room in the
+Technologies Showcase in November $2018$ in the Queen Elizabeth II
+conference centre (see~\FigureRef{fig:qe2}), where it operated in a normal room in the
 presence of 800 people and a large fluctuating ambient magnetic field. A recent
 experiment has investigated the bias stability of a hybrid sensor in a
 simulated harsh environment~\cite{Cheiney2018}.   
+\begin{figure}[htpb]
+  \centering
+  \includegraphics[width=0.8\linewidth]{qe2.jpg}
+  \caption{Demonstration of the atom interferometer as a mobile sensor
+  of a range of horizontal accelerations at the UK National Quantum
+Technologies Showcase in November 2018.}
+\label{fig:qe2}
+\end{figure}
 \section{Concluding Remarks}
 The application of newly understood physics has often led to the
 development of more advanced technology. In turn, this has contributed
@@ -114,3 +124,4 @@ in this thesis has helped to address this need. It is anticipated that
 the application of quantum mechanics to technology will
 bring practical benefits as well as enable a deeper understanding of
 physical phenomena.
+\let\clearpage\relax
