--- a/frontmatter.tex
+++ b/frontmatter.tex
@@ -1,7 +1,7 @@
 \titlepage[Department of Physics\\
 Centre for Cold Matter]{A thesis submitted to Imperial
   College London for partial
-fulfillment of the requirements for the degree of Doctor of Philosophy }
+fulfillment of the requirements for the degree of Doctor of Philosophy}
 \begin{abstract}
     Matter-wave interferometry has enabled high precision measurements of
     inertial forces such as gravity and the
@@ -25,9 +25,9 @@ fulfillment of the requirements for the degree of Doctor of Philosophy }
     to horizontal accelerations. Combining this with a classical
     accelerometer provides a method of correcting for
     vibration-induced noise, as well as determining the interferometer
-    fringe order. After an integration time of \sivalue{70}{\s}, the
+    fringe order. After an integration time of \sivalue{40}{\s}, the
     sensitivity to horizontal accelerations is better than
-    \sivalue{1e-6}{\m\s\tothe{-2}}. Effects which limit this
+    \sivalue{3e-6}{\m\s\tothe{-2}}. Effects which limit this
     sensitivity are discussed.
  \end{abstract}
 \begin{declaration}
@@ -56,8 +56,7 @@ detail and desire to understand the experiment from first principles
 have taught me a lot about how to approach scientific research. I also
 owe a great deal of thanks to the various post-docs I have worked
 with. Yu-Hung Lien and Giovanni Barontini were both immensely helpful when I was a new student
-and unfamiliar with the techniques required to trap and cool Rubidium
-was invaluable. After they moved on, we were soon joined by Indranil
+and unfamiliar with the techniques required to trap and cool Rubidium. After they moved on, we were soon joined by Indranil
 Dutta. As someone who had just come from a well-established
 atom interferometry experiment, he was a welcome addition
 to our project. I owe him a great deal for everything he taught me
@@ -86,25 +85,18 @@ any Inventor design into a precision-engineered component, I am
 certain my PhD would have gone much differently.
 \par\noindent
 Finally, I would like to acknowledge people within my personal life
-who have helped me get to where I am today. My parents, Si\^{a}n and
-Carl have been very supportive of my choices in life. I am grateful
+who have helped me get to where I am today. My family and in
+particular my parents, Si\^{a}n and
+Carl, have been very supportive of my choices in life. I am grateful
 for everything they have given me. Last, but by no means least, I would
 like to thank Vickie for our time together. She has encouraged me to pursue the things I
 enjoy and to focus on the positive aspects of work, as well as life. Even when we were thousands of miles apart, she continued to
 offer her kind words of encouragement and I will forever be grateful
 for her unique support.
 \end{acknowledgements}
-%\begin{preface}
-%    This thesis describes my research on various aspects of\ldots
-%\end{preface}
-
-%\begin{frontmatter}
-    %   \dedication{For the World}
-    %   ...
-%\end{frontmatter}
-
 \tableofcontents
 \listoffigures
 \listoftables
 \frontquote{I may not have gone where I intended to go, but I think I
 have ended up where I needed to be}{Douglas Adams}
+\let\clearpage\relax
