--- a/jstammersThesis.tex
+++ b/jstammersThesis.tex
@@ -1,6 +1,6 @@
 % !TEX root
 %% For normal draft builds (figs not displayed hence fast compile)
-\documentclass[hyperpdf,nobind,oneside]{hepthesis}
+%\documentclass[hyperpdf,nobind,oneside]{hepthesis}
 %\documentclass[hyperpdf,nobind,draft,twoside]{hepthesis}
 
 %% For short draft builds (breaks citations by necessity)
@@ -9,11 +9,11 @@
 %% For Cambridge soft-bound version
 %\documentclass[hyperpdf,bindnopdf,booktabs, oneside]{hepthesis}
 %% For Cambridge hard-bound version (must be one-sided)
-%\documentclass[hyperpdf,oneside,bind]{hepthesis}
+\documentclass[hyperpdf,oneside,bind]{hepthesis}
 % Load special font packages here if you wish
 
 \include{preamble}
-%\includeonly{mots,interferometry}
+%\includeonly{mots}
 \makeatother
 \begin{document}
 \begin{frontmatter}
